# pils

./: .coverage  .gitmodules  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/api/analysis/: azel.md
examples/: azel_20251206_1304.csv  loader.ipynb  loader.ipynb.backup  ppk_stout_analysis.ipynb  quick_azel.ipynb
pils/: __init__.py  flight.py  synchronizer.py
pils/analyze/: __init__.py  azel.py  ekf.py  ppk.py
pils/analyze/ekf/ekfTestData/: sample_photo.ecsv
pils/analyze/ppkdata/: __init__.py
pils/analyze/ppkdata/PPK/: report.py
pils/analyze/ppkdata/RINEX/: analyzer.py
pils/config/: data_sources.py
pils/drones/: BlackSquareDrone.py  DJIDrone.py  litchi.py
pils/loader/: stout.py
pils/sensors/: LM76.py  __init__.py  adc.py  camera.py  emlid.py  inclinometer.py  sensors.py
pils/utils/: tools.py
tests/: test_azel_analysis.py  test_azel_standard_columns.py  test_camera_integration.py  test_common_time_config.py  test_coordinate_standardization.py  test_correlation_sync.py  test_drones_litchi.py  test_ekf_analysis.py  test_emlid.py  test_sensors_camera.py  test_sensors_camera_edge_cases.py  test_sensors_lm76.py
