[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pils"
version = "2026.2.5"
description = "PILS - POLOCALC Inertial & Drone Loading System. Integrated flight data loading and decoding with STOUT database interface"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "POLOCALC Team", email = "info@polocalc.org"}
]
keywords = ["drone", "data-loading", "sensors", "stout", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"

dependencies = [
    "polars>=0.20.0",
    "numpy>=1.23.0",
    "opencv-python>=4.6.0",
    "matplotlib>=3.5.0",
    "pyubx2>=1.2.0",
    "scipy>=1.9.0",
    "h5py>=3.0.0",
    "pyyaml>=6.0",
    "astropy>=6.0",
    "ahrs>=0.3.0",
    "telemetry-parser>=0.1.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
]
stout = ["stout>=2.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "bumpver>=2023.0",
    "pyright>1.1",
]

[project.urls]
Repository = "https://github.com/POLOCALC/data-loader"
Documentation = "https://github.com/POLOCALC/data-loader/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["pils*"]
exclude = ["tests*", "site*", "plans*", "examples*", "docs*", "htmlcov*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "A",    # builtins shadowing
  "B",    # bugbear
  "C90",  # complexity
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "UP",   # pyupgrade
  "I"     # import sorting
]
ignore = [
  "E501",  # line too long (allows flexibility)
  "C901",  # function too complex (allows legacy code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=pils --cov-report=term --cov-report=html"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.bumpver]
current_version = "2026.2.5"
version_pattern = "YYYY.MM.INC0"
commit_message = "chore: bump version {old_version} -> {new_version}"
tag_message = "Release {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"pils/__init__.py" = [
    '__version__ = "{version}"',
]